fix: word-break not working due to a tag's nowrap
i don't know why i set a tag's white-space nowrap

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -93,7 +93,7 @@ body {
 
 ::-webkit-scrollbar {
   width: 0.5rem;
-  height: 1rem;
+  height: 0.5rem;
 }
 
 ::-webkit-scrollbar-thumb:hover {
