--- a/src/assets/yori.css
+++ b/src/assets/yori.css
@@ -2,7 +2,7 @@
 
 a {
   color: inherit;
-  white-space: nowrap;
+  /* white-space: nowrap; */
   text-decoration: none;
 }
 
